--- a/start/about/about.css
+++ b/start/about/about.css
@@ -57,3 +57,31 @@
   color: #FFF;
   padding: 3em;
 }
+.top-section {
+  width: 100%;
+  background-color: rgb(89, 89, 214);
+  height: 210px;
+  margin: 10px 0px;
+  overflow: hidden;
+}
+.box-shadow {
+  -webkit-box-shadow: 0px 1px 9px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 9px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 9px -1px rgba(0, 0, 0, 0.75);
+
+}
+.top-inner-section {
+  overflow: auto;
+}
+.pic-container {
+  height: 100%;
+  float: left;
+  margin-right: 20px;
+}
+
+.pic-container>img {
+  object-fit: cover;
+  display: block;
+  width: 190px;
+  margin: 10px;
+}
